Use reddit api instead of deprecated .json endpoints

--- a/src/Msoop/appsettings.json
+++ b/src/Msoop/appsettings.json
@@ -1,10 +1,17 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information"
+        }
+    },
+    "AllowedHosts": "*",
+    "Reddit": {
+        "WebClientId": "QEp5wtTH9BWVAgPdCpwvdQ",
+        "WebRedirectUri": "https://localhost:5001/redirect",
+        "WebUserAgent": "web:msoop:v0.0.2 (by /u/resool)",
+        "AuthorizationAddress": "https://www.reddit.com/api/v1/access_token",
+        "ApiBaseAddress": "https://oauth.reddit.com"
     }
-  },
-  "AllowedHosts": "*"
 }
