--- a/src/Msoop/Msoop.csproj
+++ b/src/Msoop/Msoop.csproj
@@ -1,7 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <UserSecretsId>a4456f11-a8c9-48aa-b689-b9cfd67676d3</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
