Clean up imports and code formatting

--- a/src/Msoop/appsettings.Development.json
+++ b/src/Msoop/appsettings.Development.json
@@ -8,6 +8,7 @@
         }
     },
     "ConnectionStrings": {
-        "MsoopConnection": "Server=localhost, 1433;Password=docKER123;UID=SA;Database=Msoop;MultipleActiveResultSets=true"
+        "MsoopConnection":
+            "Server=localhost, 1433;Password=docKER123;UID=SA;Database=Msoop;MultipleActiveResultSets=true"
     }
 }
