--- a/.editorconfig
+++ b/.editorconfig
@@ -7,6 +7,7 @@ insert_final_newline=true
 
 csharp_default_private_modifier=explicit
 csharp_braces_for_ifelse=required
+csharp_braces_for_foreach=required
 csharp_for_built_in_types=use_var
 csharp_trailing_comma_in_multiline_lists=true
 csharp_object_creation_when_type_evident=target_typed
