--- a/src/Msoop.Web/appsettings.Development.json
+++ b/src/Msoop.Web/appsettings.Development.json
@@ -8,7 +8,6 @@
         }
     },
     "ConnectionStrings": {
-        "MsoopConnection":
-            "Server=localhost, 1433;Password=docKER123;UID=SA;Database=Msoop;MultipleActiveResultSets=true"
+        "MsoopConnection": "Server=localhost; Port=5432; UID=postgres; Password=docker; Database=Msoop"
     }
 }
