--- a/src/Msoop.Infrastructure/Msoop.Infrastructure.csproj
+++ b/src/Msoop.Infrastructure/Msoop.Infrastructure.csproj
@@ -5,7 +5,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.8" />
+        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.7" />
     </ItemGroup>
 
     <ItemGroup>
@@ -14,6 +14,7 @@
 
     <ItemGroup>
         <Folder Include="Data\Migrations" />
+        <Folder Include="Migrations" />
     </ItemGroup>
 
 </Project>
