--- a/.docker/docker-compose.yml
+++ b/.docker/docker-compose.yml
@@ -1,45 +1,46 @@
 version: "3.8"
 
 services:
-    webapp:
-        build:
-            context: ..
-            dockerfile: src/Msoop.Web/Dockerfile
-        env_file:
-            - .env
-        environment:
-            Reddit__WebSecret: ${REDDIT_WEB_SECRET}
-            Reddit__WebClientId: ${REDDIT_WEB_CLIENT_ID}
-            ConnectionStrings__MsoopConnection: ${MSOOP_CONNECTION_STRING}
-        depends_on:
-            - db
-        ports:
-            - "5000:80"
-    db:
-        image: "postgres"
-        env_file:
-            - .env
-        environment:
-            POSTGRES_PASSWORD: ${DB_PASSWORD}
-            POSTGRES_DB: ${DB_NAME}
-        ports:
-            - "5432:5432"
-    # Container that applies migration script
-    # To create migration script run: 
-    #       dotnet ef migrations script --idempotent -p src/Msoop.Infrastructure/ -s src/Msoop.Web -o .docker/migrations.sql
-    # To apply migrations on running db: 
-    #       docker-compose -f .docker/docker-compose.yml run db--migrations
-    db--migrations:
-        image: "postgres"
-        env_file:
-            - .env
-        environment:
-            PGHOST: db
-            PGUSER: postgres
-            PGPASSWORD: ${DB_PASSWORD}
-            PGDATABASE: ${DB_NAME}
-        command: /bin/sh -c "sleep 5s && psql -f /input.sql"
-        volumes:
-            - ./migrations.sql:/input.sql
-        depends_on:
-            - db
+  webapp:
+    image: ${WEBAPP_IMAGE}
+    build:
+      context: ..
+      dockerfile: src/Msoop.Web/Dockerfile
+    env_file:
+      - .env
+    environment:
+      Reddit__WebSecret: ${REDDIT_WEB_SECRET}
+      Reddit__WebClientId: ${REDDIT_WEB_CLIENT_ID}
+      ConnectionStrings__MsoopConnection: ${MSOOP_CONNECTION_STRING}
+    depends_on:
+      - db
+    ports:
+      - "5000:80"
+  db:
+    image: "postgres"
+    env_file:
+      - .env
+    environment:
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_DB: ${DB_NAME}
+    ports:
+      - "5432:5432"
+  # Container that applies migration script
+  # To create migration script run:
+  #       dotnet ef migrations script --idempotent -p src/Msoop.Infrastructure/ -s src/Msoop.Web -o .docker/migrations.sql
+  # To apply migrations on running db:
+  #       docker-compose -f .docker/docker-compose.yml run db--migrations
+  db--migrations:
+    image: "postgres"
+    env_file:
+      - .env
+    environment:
+      PGHOST: db
+      PGUSER: postgres
+      PGPASSWORD: ${DB_PASSWORD}
+      PGDATABASE: ${DB_NAME}
+    command: /bin/sh -c "sleep 5s && psql -f /input.sql"
+    volumes:
+      - ./migrations.sql:/input.sql
+    depends_on:
+      - db
