--- a/.docker/.env.template
+++ b/.docker/.env.template
@@ -1,3 +1,5 @@
+# Create .env file in this directory with these variables filled
+# if you want to run this app using docker compose
 DB_PASSWORD=
 DB_NAME=
 MSOOP_CONNECTION_STRING=""
