Add envs to .env.template

--- a/.docker/.env.template
+++ b/.docker/.env.template
@@ -1,7 +1,10 @@
-# Create .env file in this directory with these variables filled
-# if you want to run this app using docker compose
+# Create .env file in this directory with these variables filled if you
+# want to run this app using docker compose
 DB_PASSWORD=
 DB_NAME=
 MSOOP_CONNECTION_STRING=""
 REDDIT_WEB_CLIENT_ID=
 REDDIT_WEB_SECRET=
+
+# Only set this variable in local environment. Our deploy script will overwrite it.
+WEBAPP_IMAGE=
