--- a/src/Msoop.Web/appsettings.json
+++ b/src/Msoop.Web/appsettings.json
@@ -12,7 +12,7 @@
         "WebClientId": "QEp5wtTH9BWVAgPdCpwvdQ",
         "WebRedirectUri": "https://localhost:5001/redirect",
         "WebUserAgent": "web:msoop:v1.0.0 (by /u/resool)",
-        "AuthorizationAddress": "https://www.reddit.com/api/v1/access_token",
+        "AuthorizationBaseAddress": "https://www.reddit.com",
         "ApiBaseAddress": "https://oauth.reddit.com"
     }
 }
